fix: fix guest count function, add clear button visible

--- a/src/components/blocks/dropdown/_dropdown.scss
+++ b/src/components/blocks/dropdown/_dropdown.scss
@@ -5,11 +5,11 @@
   width: 100%;
   border: 1px solid $dark25;
   border-radius: 4px;
-  &__opened {
+  &_opened {
     border-color: $dark50;
     border-radius: 4px 4px 0 0;
   }
-  &_menu {
+  &__menu {
     border: 1px solid $dark50;
     padding-left: 10px;
     padding-right: 10px;
@@ -25,12 +25,12 @@
     &-quantity {
       display: flex;
     }
-    &__active {
+    &_active {
       display: block;
       z-index: 1000;
     }
   }
-  &_selection {
+  &__selection {
     height: 44px;
     display: flex;
     align-items: center;
@@ -41,7 +41,7 @@
       top: 25%;
     }
   }
-  &_menu-option {
+  &__menu-option {
     height: 44px;
     display: flex;
     justify-content: space-between;
@@ -59,7 +59,7 @@
   color: $dark50;
   font-size: 18px;
   cursor: pointer;
-  &__inactive {
+  &_inactive {
     opacity: 0.5;
     cursor: default;
   }
@@ -78,17 +78,20 @@
   justify-content: space-between;
   height: 44px;
 }
-.dropdown-apply,
-.dropdown-clear {
+.dropdown-btn {
   font-size: 12px;
   text-transform: uppercase;
   font-weight: 700;
   color: $dark50;
   cursor: pointer;
+  &__apply {
+    color: $purple;
+  }
+  &__clear {
+    visibility: hidden;
+    &_active {
+      visibility: visible;
+    }
+  }
 }
-.dropdown-apply {
-  color: $purple;
-}
-.dropdown-clear__invisible {
-  visibility: hidden;
-}
+
